# EvePilot

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  NOTICE  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
apps/cli/: pyproject.toml
apps/cli/src/evepilot_cli/: __init__.py  main.py  output.py  runtime.py
apps/cli/src/evepilot_cli/commands/: bootstrap.py  nodes.py
docs/: brand.md  configuration.md  installation.md  project-guidelines.md  quickstart.md  roadmap.md  vision.md
docs/architecture/: overview.md
docs/decisions/: 0001-use-monorepo.md  0002-python-first-core.md  0003-eve-ng-api-as-source-of-truth.md  0004-console-inspection-fallback-only.md  0005-cli-first-interface.md  0006-provide-installer-scripts-for-services.md  0007-use-src-layout-and-namespace-packages.md  0008-design-bootstrap-as-state-aware-console-automation.md  0009-design-bootstrap-preparation-as-flow-driven.md  0010-apply-rendered-text-configs-through-console.md  README.md  (+1 more)
tests/: test_bootstrap_config_apply_runner.py  test_bootstrap_config_file.py  test_bootstrap_console_buffer.py  test_bootstrap_console_samples.py  test_bootstrap_detector.py  test_bootstrap_errors.py  test_bootstrap_flow_loader.py  test_bootstrap_flow_matcher.py  test_bootstrap_flow_runner.py  test_bootstrap_flow_validator.py  test_bootstrap_models.py  test_bootstrap_raw_tcp_console.py  test_bootstrap_service.py  test_bootstrap_telnet_console.py  test_bootstrap_variables.py  test_cli_bootstrap.py  test_cli_nodes.py  test_cli_output.py  test_config.py  test_console.py  test_eve_ng_client.py  test_eve_ng_errors.py  test_eve_ng_models.py  test_eve_ng_service.py  test_exceptions.py  test_logging.py  test_service_result_schemas.py
(+5 files in other folders)
