[project]
name = "evepilot-workspace"
version = "0.1.0"
description = "Workspace configuration for EvePilot."
requires-python = ">=3.11"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.8",
    "mypy>=1.10",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [
    "packages/evepilot-core/src",
    "packages/evepilot-eve-ng/src",
    "apps/cli/src",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unreachable = true
packages = ["evepilot", "evepilot_cli"]
mypy_path = [
    "packages/evepilot-core/src",
    "packages/evepilot-eve-ng/src",
    "apps/cli/src",
]
