[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "evepilot-cli"
version = "0.3.0"
description = "Command-line interface for EvePilot."
requires-python = ">=3.11"
dependencies = [
    "evepilot-bootstrap==0.3.0",
    "evepilot-core==0.3.0",
    "evepilot-eve-ng==0.3.0",
    "typer>=0.12",
]

[project.scripts]
evepilot = "evepilot_cli.main:app"

[tool.setuptools.packages.find]
where = ["src"]
